change the path of the css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../test/styles.css">
+    <link rel="stylesheet" href="../../freecodecamp/freecodecamp/style.css">
     <title>Document from freecodecamp</title>
 </head>
 <body>
