add shakur to first name

--- a/Introduction to the Responsive Web Design Projects/Build a Tribute Page/index.html
+++ b/Introduction to the Responsive Web Design Projects/Build a Tribute Page/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="main"> 
     <div>
-        <h1 id="title">My tribute page to Tupac</h1>
+        <h1 id="title">My tribute page to Tupac Shakur</h1>
         <div id="text-1">The man who know what freespeech was</div>
             <div id="img-div">
             <img src="../../Introduction to the Responsive Web Design Projects/Build a Tribute Page/tupac-crop.jpg" alt="" id="img">
