--- a/Introduction to the Responsive Web Design Projects/Build a Tribute Page/index.html
+++ b/Introduction to the Responsive Web Design Projects/Build a Tribute Page/index.html
@@ -9,7 +9,7 @@
 <body id="main"> 
     <div>
         <h1 id="title">My tribute page to Tupac Shakur</h1>
-        <div id="text-1">The man who know what freespeech was</div>
+        <div id="text-1">The man who knew what freespeech was, what to do and how to do with it!</div>
             <div id="img-div">
             <img src="../../Introduction to the Responsive Web Design Projects/Build a Tribute Page/tupac-crop.jpg" alt="" id="img">
             <p id="img-caption">Tupac Shakur</p>
